improvments by review Tobias Lippert et al.